# web-scheme

./: .gitignore  LICENSE  README.md  reg-machine-instr.txt  test.rma
common/: applicability.scm  collections.scm  generic-procedures.scm  load.scm  memoizers.scm  predicates.scm  trie.scm
compiler/: better-expand.scm  compiler.scm  cps-transform.scm  expand.scm  load.scm  symbol.scm  syntax.scm
demo/: .eslintignore  .eslintrc  .gitignore  package-lock.json  package.json
demo/src/: index.html
demo/src/scripts/: index.js  web_scheme.js  web_scheme.wasm
demo/src/styles/: index.scss
demo/webpack/: webpack.common.js
example/: apply-test.scm  compatibility-layer.scm  compile-compiler.scm  compiler.rma  compiler.scm  cps-generator.rma  fact-cps.rma  fact.rma  fib-cps.rma  fib.rma  varargs.rma
reg-machine/: .clang-format  CMakeLists.txt  Makefile  compiled-proc.cpp  compiled-proc.h  env.cpp  env.h  fact.rma  gc.c  gc.cpp  gc.h  instr.cpp  instr.h  machine.cpp  machine.h  main.cpp  op.cpp  op.h  parser.cpp  parser.h  primitive-procs.cpp  primitive-procs.h  sicp.h  types.cpp  types.h
